# mclient-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  run.sh
src/: alloc.c  alloc.h  main.c  meson.build  socket.c  socket.h  sound.c  sound.h  term.c  term.h
